fix: :art: switched-to-css-modules-to-prevent-styles-overlap

--- a/client/src/components/cards/Cards.module.css
+++ b/client/src/components/cards/Cards.module.css
@@ -3,4 +3,9 @@
   width: 100%;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 20px;
+  @media (max-width: 633px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
